syntax="proto3";
package auth_v2;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "pkg/api/auth_v2;auth_v2";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc GetMe(GetMeRequest) returns (GetMeResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirmation = 4;
  Role role = 5;
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_ADMIN = 1;
  ROLE_USER = 2;
}

message RegisterResponse {
  string token = 1;
}

message GetMeRequest {
  int64 id = 1;
}

message GetMeResponse {
  User user = 1;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message UpdateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}
